--- a/src/common/main.css
+++ b/src/common/main.css
@@ -1,18 +1,3 @@
-@media only screen and(max-width: 1100px){
-    .folder-right-text{
-        min-width: 300px;
-    }
-}
-@media only screen and (max-width: 1366px) {
-    .parallax {
-        background-attachment: scroll;
-    }
-    .folder-top{
-        position: relative;
-        clip-path: polygon(3% 0%, 97% 0, 97% 77%, 50% 100%, 3% 77%);
-    }
-}
-
 body {
     margin: 0;
     background: -webkit-linear-gradient(0, #D6A4A4, #DAE2F8);  /* Chrome 10-25, Safari 5.1-6 */
@@ -46,13 +31,13 @@ h5{
     color: rgb(56, 50, 84);
 }
 .summary{
-    margin: 30vh 0 35vh 0;
+    margin: 31vh 0 31vh 0;
     padding: 0 30px;
     min-width: 900px;
 }
 
 .education{
-    margin: 10vh 0 25vh 0;
+    margin: 10vh 0 10vh 0;
     padding: 0 30px;
     min-width: 900px;
 }
@@ -171,4 +156,19 @@ h5{
     -ms-filter: "FlipH";
     cursor: pointer;
     margin-top: 30px;
+}
+
+@media only screen and(max-width: 1100px){
+    .folder-right-text{
+        min-width: 300px;
+    }
+}
+@media only screen and (max-width: 1366px) {
+    .parallax {
+        background-attachment: scroll;
+    }
+    .folder-top{
+        position: relative;
+        clip-path: polygon(100% 0%, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
+    }
 }
