--- a/src/common/main.css
+++ b/src/common/main.css
@@ -122,6 +122,11 @@ h5{
     min-width: 900px;
 }
 
+.badges-container {
+    display: flex;
+    flex-flow: row wrap;
+}
+
 .badges{
     color: #6c4996;
     border-radius: 3%;
@@ -170,5 +175,33 @@ h5{
     .folder-top{
         position: relative;
         clip-path: polygon(100% 0%, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
+    }
+    .summary{
+        max-width: 350px;
+        margin: 15vh 0 15vh 0;
+        min-width: 0;
+        padding: 0;
+    }
+    .folder-right{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 24px;
+        justify-content: center;
+    }
+    .education{
+        max-width: 350px;
+        min-width: 0;
+        padding: 0;
+    }
+    .work{
+        max-width: 350px;
+        min-width: 0;
+        padding: 0;
+    }
+    .links{
+        max-width: 350px;
+        min-width: 0;
+        padding: 0;
     }
 }
