--- a/src/common/main.css
+++ b/src/common/main.css
@@ -1,208 +1,220 @@
 body {
-    margin: 0;
-    background: -webkit-linear-gradient(0, #D6A4A4, #DAE2F8);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(0, #D6A4A4, #DAE2F8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  margin: 0;
+  background: -webkit-linear-gradient(
+    0,
+    #d6a4a4,
+    #dae2f8
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    0,
+    #d6a4a4,
+    #dae2f8
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-h3,h2,h4,h5,h6 {
-    margin: 0;
-    padding: 0;
+h3,
+h2,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
 }
 
-hr{
-    margin: 30px auto;
-    width: 70%;
-    background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+hr {
+  margin: 30px auto;
+  width: 70%;
+  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
 }
 
-h5{
-    font-family: "Palatino", "Trebuchet MS", serif;
+h5 {
+  font-family: 'Palatino', 'Trebuchet MS', serif;
 }
 
 .parallax {
-    display: flex;
-    flex-direction: column;
-    font-family: "Trebuchet MS", "Palatino", "Droid Serif", "serif";
-    background: no-repeat fixed center center;
-    background-size: cover;
-    /*color: rgb(56, 50, 84);*/
-    color: #314659;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Trebuchet MS', 'Palatino', 'Droid Serif', 'serif';
+  background: no-repeat fixed center center;
+  background-size: cover;
+  /*color: rgb(56, 50, 84);*/
+  color: #314659;
 }
-.summary{
-    margin: 31vh 0 31vh 0;
-    padding: 0 30px;
-    min-width: 900px;
-}
-
-.education{
-    margin: 10vh 0 10vh 0;
-    padding: 0 30px;
-    min-width: 900px;
+.summary {
+  margin: 31vh 0 31vh 0;
+  padding: 0 30px;
+  min-width: 900px;
 }
 
-.links{
-    height: 100vh;
-    padding: 0 30px;
-    min-width: 900px;
+.education {
+  margin: 10vh 0 10vh 0;
+  padding: 0 30px;
+  min-width: 900px;
+}
+
+.links {
+  height: 100vh;
+  padding: 0 30px;
+  min-width: 900px;
 }
 
 .logo-img {
-    object-fit: contain;
-    vertical-align: middle;
+  object-fit: contain;
+  vertical-align: middle;
 }
 
-.thumbnail-big{
-    width: 10rem;
-    height: 10rem;
-    border-radius: 50%;
-    margin: 20px;
-    object-fit: cover;
+.thumbnail-big {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  margin: 20px;
+  object-fit: cover;
 }
 
-.thumbnail-small{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-self: stretch;
+.thumbnail-small {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-self: stretch;
 }
 
-.link{
-    margin-top: 10px;
-    border-radius: 18%;
+.link {
+  margin-top: 10px;
+  border-radius: 18%;
 }
 
 .folder-top {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 50vh;
-    min-width: 30vw;
-    justify-content: start;
-    background: rgb(247, 247, 249);
-    position: fixed;
-    clip-path: polygon(50% 0%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 50vh;
+  min-width: 30vw;
+  justify-content: start;
+  background: rgb(247, 247, 249);
+  position: fixed;
+  clip-path: polygon(50% 0%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
 }
 
 .folder-top-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: rgba(14, 13, 13, 0.7);
-    font-size: 1.25rem;
-    min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: rgba(14, 13, 13, 0.7);
+  font-size: 1.25rem;
+  min-height: 300px;
 }
-.folder-top-text .sub-titles{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-width: 250px;
+.folder-top-text .sub-titles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 250px;
 }
 
-.folder-top-text .sub-titles .title{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10px;
+.folder-top-text .sub-titles .title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
 }
 
 .folder-right {
-    flex: 2 1 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 30vw;
-    justify-content: center;
+  flex: 2 1 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 30vw;
+  justify-content: center;
 }
 
-.work{
-    padding: 0 30px;
-    margin-top: 30px;
-    min-width: 900px;
+.work {
+  padding: 0 30px;
+  margin-top: 30px;
+  min-width: 900px;
 }
 
 .badges-container {
-    display: flex;
-    flex-flow: row wrap;
+  display: flex;
+  flex-flow: row wrap;
 }
 
-.badges{
-    color: #6c4996;
-    border-radius: 3%;
-    background: #bfb0d2;
-    padding: 3px 9px;
-    margin: 3px;
-    font-weight: 600;
-    font-size: 12px;
+.badges {
+  color: #6c4996;
+  border-radius: 3%;
+  background: #bfb0d2;
+  padding: 3px 9px;
+  margin: 3px;
+  font-weight: 600;
+  font-size: 12px;
 }
 
 .arrow-img-1 {
-    object-fit: contain;
-    vertical-align: middle;
-    display: flex;
-    flex-direction: row;
-    align-self: flex-end;
-    margin-right: 43px;
-    cursor: pointer;
+  object-fit: contain;
+  vertical-align: middle;
+  display: flex;
+  flex-direction: row;
+  align-self: flex-end;
+  margin-right: 43px;
+  cursor: pointer;
 }
 
 .arrow-img-2 {
-    object-fit: contain;
-    vertical-align: middle;
-    display: flex;
-    flex-direction: row;
-    align-self: flex-start;
-    margin-left: 43px;
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-    -webkit-filter: FlipH;
-    filter: FlipH;
-    -ms-filter: "FlipH";
-    cursor: pointer;
-    margin-top: 30px;
+  object-fit: contain;
+  vertical-align: middle;
+  display: flex;
+  flex-direction: row;
+  align-self: flex-start;
+  margin-left: 43px;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  -webkit-filter: FlipH;
+  filter: FlipH;
+  -ms-filter: 'FlipH';
+  cursor: pointer;
+  margin-top: 30px;
 }
 
-@media only screen and(max-width: 1100px){
-    .folder-right-text{
-        min-width: 300px;
-    }
+@media only screen and(max-width: 1100px) {
+  .folder-right-text {
+    min-width: 300px;
+  }
 }
 @media only screen and (max-width: 1366px) {
-    .parallax {
-        background-attachment: scroll;
-    }
-    .folder-top{
-        position: relative;
-        clip-path: polygon(100% 0%, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
-    }
-    .summary{
-        max-width: 350px;
-        margin: 15vh 0 15vh 0;
-        min-width: 0;
-        padding: 0;
-    }
-    .folder-right{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-left: 24px;
-        justify-content: center;
-    }
-    .education{
-        max-width: 350px;
-        min-width: 0;
-        padding: 0;
-    }
-    .work{
-        max-width: 350px;
-        min-width: 0;
-        padding: 0;
-    }
-    .links{
-        max-width: 350px;
-        min-width: 0;
-        padding: 0;
-    }
+  .parallax {
+    background-attachment: scroll;
+  }
+  .folder-top {
+    position: relative;
+    clip-path: polygon(100% 0%, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
+  }
+  .summary {
+    max-width: 350px;
+    margin: 15vh 0 15vh 0;
+    min-width: 0;
+    padding: 0;
+  }
+  .folder-right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 24px;
+    justify-content: center;
+  }
+  .education {
+    max-width: 350px;
+    min-width: 0;
+    padding: 0;
+  }
+  .work {
+    max-width: 350px;
+    min-width: 0;
+    padding: 0;
+  }
+  .links {
+    max-width: 350px;
+    min-width: 0;
+    padding: 0;
+  }
 }
